Added areas infrastructure

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/GoodGuysCommunity.Web.csproj
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/GoodGuysCommunity.Web.csproj
@@ -23,6 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Forum\Controllers\" />
+    <Folder Include="Areas\Forum\Data\" />
+    <Folder Include="Areas\Forum\Models\" />
+    <Folder Include="Areas\Forum\Views\" />
     <Folder Include="wwwroot\resources\" />
   </ItemGroup>
 
