--- a/GoodGuysCommunity/GoodGuysCommunity.Web/appsettings.json
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=GoodGuysCommunityDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=NIKOLA-PC\\SQLNIK; Database=GoodGuysCommunityDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
