Added db classes for resource methods and a db seed method

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/GoodGuysCommunity.Web.csproj
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/GoodGuysCommunity.Web.csproj
@@ -23,10 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Forum\Controllers\" />
-    <Folder Include="Areas\Forum\Data\" />
     <Folder Include="Areas\Forum\Models\" />
     <Folder Include="Areas\Forum\Views\" />
+    <Folder Include="Areas\Resources\Views\Browse\" />
     <Folder Include="wwwroot\resources\" />
   </ItemGroup>
 
