Added base of livestreaming

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/GoodGuysCommunity.Web.csproj
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/GoodGuysCommunity.Web.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Resources\Views\Browse\" />
+    <Folder Include="wwwroot\resources\" />
   </ItemGroup>
 
 </Project>
