--- a/GoodGuysCommunity/GoodGuysCommunity.Web/appsettings.json
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/appsettings.json
@@ -1,4 +1,10 @@
 ﻿{
+  "Authentication": {
+    "Facebook": {
+      "AppId": "183604185751158",
+      "AppSecret": "e33aadf326c66191a323c80e1fa82052"
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=GoodGuysCommunityDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
