--- a/GoodGuysCommunity/GoodGuysCommunity.Web/appsettings.json
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=GoodGuysCommunityDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=NIKOLA-PC\\SQLNIK;Database=GoodGuysCommunityDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
