Added users being live. Added listing of all streamers and joining their streams if they are live. Added functionality for streamers to change their live status

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/GoodGuysCommunity.Web.csproj
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/GoodGuysCommunity.Web.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Broadcast\Views\Home\" />
     <Folder Include="Areas\Resources\Views\Browse\" />
     <Folder Include="wwwroot\resources\" />
   </ItemGroup>
